# cuckoo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cuckoo.c  imdone-help.md
.imdone/: config.json  sort.json
cmake/: Coveralls.cmake  CoverallsGenerateGcov.cmake
libcuckoo/: CMakeLists.txt  cuckoo.c  cuckoo.h  cuckoo_internal.h
tests/: CMakeLists.txt  creation_test.c  destruction_test.c  insertion_test.c  testing.h
